<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alanrogue.bluetoothleproject.hrm_setup"
    android:id="@+id/relativeLayoutSetup">

    <TextView
        android:text="@string/height"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtHeight"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/edtHeight"
        android:layout_alignBottom="@+id/edtHeight"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/hint_height"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/edtHeight"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="20sp"
        android:id="@+id/txtWeight"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/edtWeight"
        android:layout_alignBottom="@+id/edtWeight"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:inputType="numberSigned"
        android:textSize="20sp"
        android:ems="10"
        android:id="@+id/edtWeight"
        android:layout_below="@+id/edtHeight"
        android:layout_marginStart="25dp"
        android:layout_alignEnd="@+id/edtHeight"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/txtSex"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/radGrpGender"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/txtAge" />

    <RadioGroup
        android:id="@+id/radGrpGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radBtnMale"
        android:layout_below="@+id/edtWeight"
        android:layout_alignStart="@+id/edtWeight"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/rdtBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/male"
            android:gravity="center_vertical" />

        <RadioButton
            android:id="@+id/rdtBtnFemale"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/txtAge"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/edtAge"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edtAge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edtAge"
        android:textSize="20sp"
        android:layout_below="@+id/radGrpGender"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
